# flask_blog

./: LICENSE  README.md  flask_blog.py  pyproject.toml
flask_blog/: __init__.py  flask_blog.py  flaskblog.py  forms.py  models.py  routes.py
flask_blog/templates/: home.html  layout.html  login.html  register.html
templates/: about.html  home.html
