[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["Henrique Cecconi <58144622+HenriqueCecconi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
